# trame

./: .gitignore  CMakeLists.txt  README.md  Trame.sln
PerformanceTest/: PerformanceTest.csproj  Program.cs  packages.config
PerformanceTest/Properties/: AssemblyInfo.cs
PerformanceTest/performance_tests/: cpp_default_mem.csv  cpp_leap_mem.csv  cpp_leap_without_mem.csv  csharp_default_mem.csv  csharp_default_without_mem.csv  csharp_leap_mem.csv
Trame/: ICameraAbstraction.cs  Trame.cs  Trame.csproj  Trame.nuspec  packages.config
Trame.Device/: IDevice.cs
Trame.Device/Properties/: AssemblyInfo.cs
Trame.Kinect/: KinectAdapter.cs  KinectDevice.cs
Trame.Kinect/Properties/: AssemblyInfo.cs
Trame.Kinect2/: packages.config
Trame.Kinect2/Properties/: AssemblyInfo.cs
Trame.KinectAndLeap/Properties/: AssemblyInfo.cs
Trame.Leap/: LeapAdapter.cs  LeapMotion.cs
cpp/: CMakeLists.txt  README.md
cpp/doc/: Doxyfile  trame.dia
cpp/src/: trame.cpp  trame.hpp
cpp/src/device/: device_abstraction.hpp  device_stub.hpp  generator.hpp
cpp/src/device/adapter/: leap_adapter.cpp  leap_adapter.hpp
cpp/src/serialization/: json_serializer.cpp  json_serializer.hpp  protobuf_serializer.hpp  serializer.hpp
cpp/src/skeleton/: joint.cpp  joint.hpp  skeleton.cpp  skeleton.hpp
cpp/test/: test_skeleton.cpp  trame_test.cpp  trame_viewer.cpp
cpp/test/viewer/: viewer.py
csharp/: Trame.sln
csharp/LeapTest/: Program.cs
csharp/Trame/: Trame.csproj  packages.config
csharp/Trame/Implementation/: Trame.cs
csharp/Trame/Interface/: DeviceType.cs  ICameraAbstraction.cs  IJoint.cs  ISkeleton.cs  ITrame.cs  JointType.cs  OutputType.cs
csharp/TrameNetworkMessages/: MessageTypes.txt  TrameNetworkMessages.csproj  UnregisterMobileDeviceMessage.cs  UserInitMessage.cs  UserUpdateMessage.cs
csharp/TrameNetworkMessages/Properties/: AssemblyInfo.cs
csharp/TrameRunner/: Program.cs  TrameRunner.csproj
csharp/TrameRunner/Properties/: AssemblyInfo.cs
csharp/TrameSerialization/: ISerializer.cs  Serialization.cs  TrameSerialization.csproj  packages.config
csharp/TrameSerialization/Properties/: AssemblyInfo.cs
csharp/TrameSerialization/Serializer/: BasicSerializer.cs  JSONSerializer.cs  ProtobufSerializer.cs
csharp/TrameServer/: Program.cs  Server.cs  TrameServer.csproj  packages.config
csharp/TrameServer/Properties/: AssemblyInfo.cs
csharp/TrameService/: MessageTypes.txt  Program.cs  Service.cs  TrameService.csproj  packages.config
csharp/TrameService/Messages/: UserUpdateMessage.cs
csharp/TrameService/Properties/: AssemblyInfo.cs
csharp/TrameSkeleton/: TrameSkeleton.csproj  packages.config
csharp/TrameSkeleton/Implementation/: Creator.cs  Default.cs  Joint.cs  OrientedJoint.cs  Skeleton.cs  SkeletonAlgebra.cs  SkeletonDiff.cs
csharp/TrameSkeleton/Interface/: IJoint.cs  ISkeleton.cs  JointType.cs
csharp/TrameSkeleton/Math/: Convert.cs  SkeletonAlgebra.cs  Vector3.cs  Vector4.cs
csharp/TrameSkeletonUnitTest/: JointTest.cs  SkeletonAlgebraTest.cs  SkeletonTest.cs  TrameSkeletonUnitTest.csproj
csharp/TrameUnitTest/: BasicSerializationTest.cs  JointTest.cs  SkeletonTest.cs  TrameUnitTest.csproj
performance_tests/: cpp_default_without_mem.csv  csharp_leap_without_mem.csv
src/: .travis.yml  Trame.sln  trame.cpp  trame.hpp
src/LeapTest/: LeapTest.csproj  Program.cs
src/LeapTest/Properties/: AssemblyInfo.cs
src/PerformanceTest/: Kinect2Test.cs  PerformanceTest.csproj  Program.cs  packages.config
src/Trame/: Trame.csproj  packages.config
src/Trame.Device/: Trame.Device.csproj
src/Trame.Kinect/: Trame.Kinect.csproj
src/Trame.Kinect2/: KinectV2Device.cs  Trame.Kinect2.csproj
src/Trame.KinectAndLeap/: Trame.Fusion.csproj
src/Trame.Leap/: Trame.Leap.csproj  packages.config
src/Trame.Leap/Properties/: AssemblyInfo.cs
src/Trame/Implementation/: Trame.cs
src/Trame/Interface/: DeviceType.cs  (+1 more)
src/TrameSkeleton/: Trame.Skeleton.0.3.0.nupkg  TrameSkeleton.csproj  TrameSkeleton.nuspec
src/TrameSkeletonUnitTest/: JointTest.cs  SkeletonAlgebraTest.cs  SkeletonTest.cs  TrameSkeletonUnitTest.csproj
src/TrameUnitTest/: TrameTest.cs  TrameUnitTest.csproj  packages.config
src/device/: device_abstraction.cpp  device_abstraction.hpp  generator.cpp  generator.hpp  kinect_sdk.cpp  kinect_sdk.hpp  leap_motion.cpp  leap_motion.hpp  skeleton_mockup.cpp  skeleton_mockup.hpp
src/serialization/: json_serializer.cpp  json_serializer.hpp  protobuf_serializer.cpp  protobuf_serializer.hpp  serializer.cpp  serializer.hpp
src/skeleton/: joint.cpp  joint.hpp  skeleton.cpp  skeleton.hpp
test/: test_skeleton.cpp  trame_test.cpp  trame_viewer.cpp
test/viewer/: skeleton.json  viewer.py
(+40 files in other folders)
